--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@ span.psw {
     <button type="button" class="cancelbtn" style="color: white;">Cancel</button>
      <a class="buttonredirect" href="http://pratiksisodia.wingified.com/?id=3000150">Redirect</a>
     <span class="psw">Forgot <a href="#">password?</a></span>
+     
+     <div class="custom-select">
+                                <select id="bkrregistration" name="bkrregistration" tabindex="24" 
+                                             <option value="" disabled="disabled" class="ng-binding">Maak je keuze</option>
+                                             <option label="Ja" value="number:1">Ja</option>
+                                             <option label="Nee" value="number:2" selected="selected">Nee</option>
+                                             <option label="Weet ik niet" value="number:3">Weet ik niet</option></select>
+                            </div>
   </div>
 </form>
 
