--- a/index.html
+++ b/index.html
@@ -132,14 +132,24 @@ span.psw {
         <a href="https://github.com/Pratik-2003/Test-Website" class="btn">View on GitHub</a>
     </section>
      <script type="text/javascript">
-	 function revenue(){    
-	window.VWO = window.VWO || [];
-	window.VWO.push(['track.revenueConversion',"200"]);
+	 function testRevenue(){    
+	window._vis_opt_queue = window._vis_opt_queue || [];
+	window._vis_opt_queue.push(function() {_vis_opt_revenue_conversion("200");});
+	 };
+	 function testCustomConv(){	 
+	window._vis_opt_queue = window._vis_opt_queue || [];
+	window._vis_opt_queue.push(function() {_vis_opt_goal_conversion(250);});
 	 };
 	     
+	 function revenue(){    
+	window.VWO = window.VWO || [];
+	window.VWO.push(['track.revenueConversion',"100"]);
+	 };
+	     
+	
 	 function customConv(){	 
 	window.VWO = window.VWO || [];
-	window.VWO.push(['track.goalConversion',250]);
+	window.VWO.push(['track.goalConversion',14]);
 	 };
 	 
 	 //Custom conversion tracking for QF-8454
@@ -197,9 +207,9 @@ span.psw {
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
-	<button style="color: blue;" onclick="revenue()">Revenue Link</button>  
+	<button style="color: blue;" onclick="testRevenue()">Revenue Link</button>  
 	  <p>
-	<button style="color: Yellow;" onclick="customConv()">Custom Conversion</button>
+	<button style="color: Yellow;" onclick="testCustomConv()">Custom Conversion</button>
 	 <p>
 	<button style="color: Cyan;" onclick="abt189()">Custom Conversion 189</button>
   </div>
