updating cd logic

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@ span.psw {
   .cancelbtn {
      width: 100%;
   }
+ .genderbtn {
+     width: 100%;
+  }
   .buttonredirect {
         display: inline-block;
         padding: 10px 20px;
@@ -263,7 +266,7 @@ span.psw {
       </div>
 	<span>
 		<button type="button" class="genderbtn" style="color: white;" onclick="genderMale()">Male</button>
-		<button type="button" class="genderbtn" style="color: grey;" onclick="genderFemale()">Female</button>
+		<button type="button" class="genderbtn" style="color: black;" onclick="genderFemale()">Female</button>
 		<button type="button" class="genderbtn" style="color: orange;" onclick="genderOther()">Other</button>
 	  </span>
     <span class="psw">Forgot <a href="#">password?</a></span>
