Updated gender cd

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ span.psw {
 		// Replace TAG_VALUE with your actual tag value
 		window.VWO.push(['tag', 'gender-sub1', 'male', 'user']);
 		window.VWO.push(['tag', 'gender-sub2', 'male', 'session']);
+		window.VWO.push(['tag', 'testValue', 'male', 'session']);
 		
 	 };
 	     
@@ -215,6 +216,7 @@ span.psw {
 		window.VWO.push(['tag', 'gender', 'female', 'user']);
 		window.VWO.push(['tag', 'gender-sub1', 'female', 'user']);
 		window.VWO.push(['tag', 'gender-sub2', 'female', 'session']);
+		window.VWO.push(['tag', 'testValue', 'female', 'session']);
 	 };
 	     
 	 function genderOther(){	
@@ -223,6 +225,7 @@ span.psw {
 		window.VWO.push(['tag', 'gender','other', 'user']);
 		window.VWO.push(['tag', 'gender-sub1', 'other', 'user']);
 		window.VWO.push(['tag', 'gender-sub2', 'other', 'session']);
+		window.VWO.push(['tag', 'testValue', 'other', 'session']);
 	 };
 	
 	
