--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@ span.psw {
 		window.VWO.push(['tag', 'gender-sub1', 'male', 'user']);
 		window.VWO.push(['tag', 'gender-sub2', 'male', 'session']);
 		window.VWO.push(['tag', 'testValue', 'male', 'session']);
+		window.VWO.push(['tag', 'ClickonLoginbutton', 'male', 'user']);
 		
 	 };
 	     
@@ -217,6 +218,7 @@ span.psw {
 		window.VWO.push(['tag', 'gender-sub1', 'female', 'user']);
 		window.VWO.push(['tag', 'gender-sub2', 'female', 'session']);
 		window.VWO.push(['tag', 'testValue', 'female', 'session']);
+		window.VWO.push(['tag', 'ClickonLoginbutton', 'female', 'user']);
 	 };
 	     
 	 function genderOther(){	
@@ -226,6 +228,7 @@ span.psw {
 		window.VWO.push(['tag', 'gender-sub1', 'other', 'user']);
 		window.VWO.push(['tag', 'gender-sub2', 'other', 'session']);
 		window.VWO.push(['tag', 'testValue', 'other', 'session']);
+		window.VWO.push(['tag', 'ClickonLoginbutton', 'other', 'user']);
 	 };
 	
 	
