--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Start VWO Async SmartCode -->
 <script type='text/javascript' id='vwoCode'>
 window._vwo_code=window._vwo_code || (function() {
-var account_id=15001074,
+var account_id=location.search.split('id=')[1] ? location.search.split('id=')[1] : '1',
 version=2.0,
 settings_tolerance=2000,
 hide_element='body',
